<resources>
    <string name="app_name">MySumatera</string>
    <string name="title_activity_asd">asd</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Admin</string>
    <string name="admin_kelola_objek">Kelola Objek Wisata</string>
    <string name="admin_kelola_pengguna">Kelola Pengguna</string>
    <string name="second_fragment_label">Kelola Pengguna</string>

    <string name="hi_admin">Hi, Admin</string>
    <string name="hi_wisatawan">Hi, Wisatawan</string>
    <string name="text1">Apa yang kamu cari ?</string>
    <string name="wisatawan_buat_rencana_perjalanan">Membuat Rencana Perjalanan</string>
    <string name="info_objek_wisata">Informasi Objek Wisata</string>
    <string name="rencana_perjalanan_tersimpan">Rencana Perjalanan Tersimpan</string>
    <string name="daftar_rencana_perjalanan_tersimpan">Daftar Rencana Perjalanan Tersimpan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beri_rating">Beri Rating</string>
    <string name="rating_rencana_tersimpan">Rating :</string>
    <string name="kembali">Kembali</string>
    <string name="pp">https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_640.png</string>
</resources>