<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wisatawan"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:text="Log Out"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_wisatawan"
        android:layout_marginLeft="10dp"
        android:textSize="14pt"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:layout_marginTop="100dp"
            android:textSize="12pt"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_buat_rencana_perjalanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wisatawan_buat_rencana_perjalanan"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_info_objek_wisata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_objek_wisata"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/btn_rencana_perjalanan_tersimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rencana_perjalanan_tersimpan"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>